  sickness object on the ground.

--Fixed case where all same-biome (or floor) drop spots are full, causing
  object to strangely drop in a distant spot.  The reason for prefering
  same-biome or floor for drops was to avoid dropping into a bad biome.
  Might as well just check that the drop spot is not a bad biome directly (and
  allow other types of cross-boundary drops).  Fixes #550




Server Fixes

--CURSE MY BABY now always targets most-recent baby, whether dead or alive
  (code has been simplified).  Fixes #546

--Fixed a bug where server sent curse status of an incoming player before
  sending the first PU telling you about that player's existence, causing your
  client to ignore their curse status.

--When mother becomes a default leader, her leadership color is assigned
  correctly (was left blank and white).  Fixes #544

--Min posse size requirements don't apply for snowballs and tattoos.  Fixes #543




Version 311   2020-February-13

--Fixed so that offspring baby arrow adjusts to point toward carried baby.




Server Fixes

--Fixed baby and leader arrows and messages to make the coordinates birth-pos
  relative (no more new babies born 7000 meters away).

--Fixed getLeadershipName server-side to correctly explore full depth of tree
  and not count levels incorrectly (before, a single leader with lots of
  followers would be described by the server as a supreme empress mistakenly).
  Thanks Twisted and Tipy.

--Sick, wounded, and murder-weapon-holding people can no longer join posses.
  Fixes #539

--Added a daily killHitLog, tracking kill hits landed by solo players or
  posses, and healing done to cancel kill hits.

--Fixed case of force-drop causing item to disappear if all matching floor or
  biome tiles are full.  Now searches for a drop spot off-floor and then
  off-biome.

--Added fail-safe case to prevent dropping an item in a bad biome at the edge
  of the bad biome no matter what.  Should correct for any remaining client